--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "mocha --reporter spec tests/service/*.js",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -10,13 +11,18 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "hbs": "~4.0.1", "async": "0.1.x",
- "mysql": "2.x",
+    "hbs": "~4.0.1", 
+    "async": "0.1.x",
+    "mysql": "2.x",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+	  "chai": "^4.1.2",
+    "restler": "^3.4.0",
+    "should": "^13.1.3",
+    "supertest": "^3.0.0"
   }
 }
