--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "fast-csv": "^1.0.0",
     "hbs": "~4.0.1", 
     "async": "0.1.x",
     "mysql": "2.x",
