--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "0.1.x",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "express": "^4.16.4",
     "fast-csv": "^1.0.0",
-    "hbs": "~4.0.1", 
-    "async": "0.1.x",
+    "hbs": "~4.0.1",
+    "morgan": "^1.9.1",
     "mysql": "2.x",
-    "morgan": "~1.9.0",
+    "password-hash": "^1.2.2",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
     "mocha": "^4.0.1",
-	  "chai": "^4.1.2",
+    "chai": "^4.1.2",
     "restler": "^3.4.0",
     "should": "^13.1.3",
     "supertest": "^3.0.0"
