--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "fast-csv": "^1.0.0",
     "hbs": "~4.0.1",
+    "moment": "^2.22.2",
     "morgan": "^1.9.1",
     "mysql": "2.x",
     "password-hash": "^1.2.2",
